--- a/src/app/components/header-component/header.component.html
+++ b/src/app/components/header-component/header.component.html
@@ -7,12 +7,15 @@
     <div class="headerApplicationName">
         {{'APPLICATION'| translate}}
     </div>
+    <div class="portrait">
+        <img src="../../../assets/images/empty-portrait.png" alt="portrait"/>
+    </div>
     <div class="headerSettings">
         <button md-icon-button [md-menu-trigger-for]="settings">
             <md-icon>more_vert</md-icon>
         </button>
         <md-menu x-position="before" y-position="below" #settings="mdMenu">
-            <button md-menu-item> {{ 'MENU.OPEN' | translate }} </button>
+            <button md-menu-item> {{ 'MENU.OPEN' | translate }}</button>
         </md-menu>
     </div>
 </div>
