Minor steps in styling

--- a/src/app/components/side-navigation/side-navigation.component.css
+++ b/src/app/components/side-navigation/side-navigation.component.css
@@ -27,6 +27,7 @@
 
 .sideNavigation .sideNavigationMenu .sheetComponentMenu .sheetComponentMenuItemText{
     font-size: small;
+    font-weight: normal;
 }
 
 .sideNavigation .sideNavigationMenu .sheetComponentMenu {
