Fixed all remaing lint errors

--- a/src/app/components/sheet-component/sheet-header-component/sheet-header.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/sheet-header.component.html
@@ -1,11 +1,11 @@
 <div class="sheetHeader">
-  <portrait-component class="portraitWrapper"></portrait-component>
+  <app-portrait-component class="portraitWrapper"></app-portrait-component>
   <div class="centerComponentsWrapper">
     <div class="centerComponentsFirstLineWrapper">
-      <identity-component class="identityWrapper"></identity-component>
-      <player-information-component class="playerInformationWrapper"></player-information-component>
+      <app-identity-component class="identityWrapper"></app-identity-component>
+      <app-player-information-component class="playerInformationWrapper"></app-player-information-component>
     </div>
-    <description-component class="descriptionWrapper"></description-component>
+    <app-description-component class="descriptionWrapper"></app-description-component>
   </div>
-  <points-component class="pointsWrapper"></points-component>
+  <app-points-component class="pointsWrapper"></app-points-component>
 </div>
