--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     </md-sidenav>
 
     <app-header class="appHeader" (onOpenSideNavigation)="start.open()"></app-header>
-    <sheet></sheet>
+    <app-sheet></app-sheet>
 </md-sidenav-layout>
 
 
