Small style improvements. Next step will be introducing angular-flex

--- a/src/app/components/sheet-component/sheet-header-component/identity-component/identity.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/identity-component/identity.component.html
@@ -1,4 +1,4 @@
-<div class="sheetComponent">
+<div class="sheetComponent identity">
     <div class="sheetComponentHeader">
         {{ 'SHEET.IDENTITY.IDENTITY' | translate }}
     </div>
