--- a/src/app/components/sheet-component/sheet-header-component/sheet-header.component.css
+++ b/src/app/components/sheet-component/sheet-header-component/sheet-header.component.css
@@ -28,10 +28,19 @@
   align-content: stretch;
 }
 
-.pointsWrapper {
-  flex: 0 0 auto;
-  margin-bottom: 3px;
+@media screen and (max-width: 420px) {
+  .pointsWrapper {
+    display: none;
+  }
 }
+
+@media screen and (min-width: 419px) {
+  .pointsWrapper {
+    flex: 0 0 auto;
+    margin-bottom: 3px;
+  }
+}
+
 
 .centerComponentsWrapper {
   flex: auto;
