Absolute path for the placeholder portrait image

--- a/src/gurpsy/components/side-navigation/side-navigation.component.html
+++ b/src/gurpsy/components/side-navigation/side-navigation.component.html
@@ -1,7 +1,7 @@
 <div class="sideNavigation">
     <div class="sideNavigationHeader">
         <div class="portrait">
-            <img src="../../../assets/images/empty-portrait.png" alt="portrait"/>
+            <img src="/assets/images/empty-portrait.png" alt="portrait"/>
         </div>
         <div class="closeButton">
             <button md-icon-button (click)="onCloseSideNav()">
