--- a/src/gurpsy/components/side-navigation/side-navigation.component.html
+++ b/src/gurpsy/components/side-navigation/side-navigation.component.html
@@ -9,49 +9,55 @@
       </button>
     </div>
   </div>
-  <div class="sideNavigationMenu">
-    <div class="sideNavigationMenuSubheader">{{'SETTINGS.SHEETVIEW'| translate}}</div>
-    <div class="sheetComponentMenu">
-      <button md-button>
+  <div class="sideNavigationBlock">
+    <div class="sideNavigationBlockheader">{{'SETTINGS.SHEETVIEW'| translate}}</div>
+    <div class="sideNavigationBlockContent">
+      <button md-button class="sideNavigationBlockContentLine">
         <md-icon>accessibility</md-icon>
-        <span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.ATTRIBUTES'| translate}}</span></button>
-      <button md-button>
+        <span>{{'SHEET.SUBJECT.ATTRIBUTES'| translate}}</span>
+      </button>
+      <button md-button class="sideNavigationBlockContentLine">
         <md-icon>hearing</md-icon>
-        <span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.DIS_ADVANTAGES'| translate}}</span></button>
-      <button md-button>
+        <span>{{'SHEET.SUBJECT.DIS_ADVANTAGES'| translate}}</span>
+      </button>
+      <button md-button class="sideNavigationBlockContentLine">
         <md-icon>school</md-icon>
-        <span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.SKILLS'| translate}}</span></button>
-      <button md-button>
+        <span>{{'SHEET.SUBJECT.SKILLS'| translate}}</span>
+      </button>
+      <button md-button class="sideNavigationBlockContentLine">
         <md-icon>flash_on</md-icon>
-        <span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.MAGIC'| translate}}</span></button>
-      <button md-button>
+        <span>{{'SHEET.SUBJECT.MAGIC'| translate}}</span>
+      </button>
+      <button md-button class="sideNavigationBlockContentLine">
         <md-icon>card_travel</md-icon>
-        <span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.EQUIPMENT'| translate}}</span></button>
-      <button md-button>
+        <span>{{'SHEET.SUBJECT.EQUIPMENT'| translate}}</span>
+      </button>
+      <button md-button class="sideNavigationBlockContentLine">
         <md-icon>mode_edit</md-icon>
-        <span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.NOTES'| translate}}</span></button>
+        <span>{{'SHEET.SUBJECT.NOTES'| translate}}</span>
+      </button>
     </div>
-    <div class="sheetSettingsMenu">
-      <div class="sideNavigationMenuSubheader">{{'SETTINGS.SETTINGS'| translate}}</div>
 
-      <div class="settingsMenuLine">
-        <label>{{'SETTINGS.LANGUAGE'| translate}}</label>
-        <md-select [(ngModel)]="selectedLanguage" (ngModelChange)="onLanguageChange()">
-          <md-option *ngFor="let language of languageOptions" [value]="language">
-            {{language.label}}
-          </md-option>
-        </md-select>
+    <div class="sideNavigationBlock">
+      <div class="sideNavigationBlockheader">{{'SETTINGS.SETTINGS'| translate}}</div>
+      <div class="sideNavigationBlockContent">
+        <div class="sideNavigationBlockContentLine">
+          <md-icon>g_translate</md-icon>
+          <md-select [(ngModel)]="selectedLanguage" (ngModelChange)="onLanguageChange()">
+            <md-option *ngFor="let language of languageOptions" [value]="language">
+              {{language.label}}
+            </md-option>
+          </md-select>
+        </div>
+        <div class="sideNavigationBlockContentLine">
+          <md-icon>important_devices</md-icon>
+          <md-select [(ngModel)]="selectedTheme" (ngModelChange)="onThemeChange()">
+            <md-option *ngFor="let theme of themeOptions" [value]="theme">
+              {{theme.label}}
+            </md-option>
+          </md-select>
+        </div>
       </div>
-
-      <div class="settingsMenuLine">
-        <label>{{'SETTINGS.THEME'| translate}}</label>
-        <md-select [(ngModel)]="selectedTheme" (ngModelChange)="onThemeChange()">
-          <md-option *ngFor="let theme of themeOptions" [value]="theme">
-            {{theme.label}}
-          </md-option>
-        </md-select>
-      </div>
-
     </div>
   </div>
 </div>
