--- a/src/styles.css
+++ b/src/styles.css
@@ -2,38 +2,65 @@
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
 
 :root {
-    --max-width-sheet-large: 768px;
-    --min-width-sheet-large: 620px;
-    --max-width-sheet-medium: 619px;
-    --min-width-device-medium: 320px;
-    --max-width-device-small: 319px
+  --max-width-sheet-large: 768px;
+  --min-width-sheet-large: 620px;
+  --max-width-sheet-medium: 619px;
+  --min-width-device-medium: 320px;
+  --max-width-device-small: 319px
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    margin: 0px 0px 0px 0px;
-    height: 100%;
+  margin: 0px 0px 0px 0px;
+  height: 100%;
 }
 
 md-sidenav {
-    width: 180px;
+  width: 180px;
 }
 
 md-sidenav-layout {
-    height: 100%;
+  height: 100%;
 }
 
 .md-sidenav-content {
-    background: var(--page-background-color);
+  background: var(--page-background-color);
 }
 
 .md-sidenav-over {
-    background: var(--side-navigation-background-color);
+  background: var(--side-navigation-background-color);
 }
 
 .sideNavigation .sideNavigationHeader .closeButton .md-button-wrapper {
-    color: var(--side-navigation-back-button);
+  color: var(--side-navigation-back-button);
+}
+
+.sideNavigation .sideNavigationBlock .sideNavigationBlockContent .sideNavigationBlockContentLine .md-button-wrapper {
+  font-weight: normal;
+  color: var(--side-navigation-font-color);
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: small;
+}
+
+.sideNavigation .sideNavigationBlock .sideNavigationBlockContent .sideNavigationBlockContentLine md-select
+.md-select-trigger {
+  border-bottom: none;
+}
+
+.sideNavigation .sideNavigationBlock .sideNavigationBlockContent .sideNavigationBlockContentLine md-select
+.md-select-trigger .md-select-value,
+.sideNavigation .sideNavigationBlock .sideNavigationBlockContent .sideNavigationBlockContentLine md-select
+.md-select-trigger .md-select-arrow {
+  font-weight: normal;
+  color: var(--side-navigation-font-color);
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: small;
+}
+
+.sideNavigation .sideNavigationBlock .sideNavigationBlockContent .sideNavigationBlockContentLine md-select
+.md-select-trigger .md-select-arrow {
+  margin-right: 0px;
 }
