Started integrating angular/flex

--- a/src/gurpsy/components/header-component/header.component.html
+++ b/src/gurpsy/components/header-component/header.component.html
@@ -7,7 +7,7 @@
     <div class="headerApplicationName">
         {{'APPLICATION'| translate}}
     </div>
-    <div class="portrait">
+    <div class="portrait" fxShow="false"  fxShow.xs>
         <img src="assets/images/empty-portrait.png" alt="portrait"/>
     </div>
     <div class="headerSettings">
