--- a/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.html
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.html
@@ -1,5 +1,5 @@
 <div class="sheetHeader">
-  <gurpsy-portrait-component class="portraitWrapper"></gurpsy-portrait-component>
+  <gurpsy-portrait-component class="portraitWrapper" fxHide="false"  fxHide.xs></gurpsy-portrait-component>
   <div class="centerComponentsWrapper">
     <div class="centerComponentsFirstLineWrapper">
       <gurpsy-identity-component class="identityWrapper"></gurpsy-identity-component>
