Further implementation of angular/flex

--- a/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.css
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.css
@@ -1,15 +1,15 @@
 .sheetHeader {
   border: black solid 1px;
   border-radius: 2px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: stretch;
+  /*display: flex;*/
+  /*flex-direction: row;*/
+  /*flex-wrap: nowrap;*/
+  /*justify-content: space-between;*/
+  /*align-items: stretch;*/
 }
 
 .portraitWrapper {
-  flex: none;
+  /*flex: none;*/
 }
 
 .descriptionWrapper {
@@ -20,21 +20,21 @@
   align-content: stretch;
 }
 
-@media screen and (max-width: 420px) {
-  .pointsWrapper {
-    display: none;
-  }
-}
+/*@media screen and (max-width: 420px) {*/
+  /*.pointsWrapper {*/
+    /*display: none;*/
+  /*}*/
+/*}*/
 
-@media screen and (min-width: 419px) {
+/*@media screen and (min-width: 419px) {*/
   .pointsWrapper {
     flex: 0 0 auto;
     margin-bottom: 3px;
   }
-}
+/*}*/
 
 .centerComponentsWrapper {
-  flex: auto;
+  /*flex: auto;*/
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -50,6 +50,6 @@
 
 .identityWrapper,
 .playerInformationWrapper {
-  flex: auto;
+  /*flex: auto;*/
 }
 
