Added size attribute, so the width of the input fields is set

--- a/src/gurpsy/components/sheet-component/sheet-header-component/identity-component/identity.component.html
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/identity-component/identity.component.html
@@ -5,15 +5,15 @@
     <div class="sheetComponentBody">
         <div class="sheetComponentBodyLine">
             <label> {{ 'SHEET.IDENTITY.NAME' | translate }}</label>
-            <input type="text" placeholder="Dai Blackthorn">
+            <input type="text" placeholder="Dai Blackthorn" size="18">
         </div>
         <div class="sheetComponentBodyLine">
             <label> {{ 'SHEET.IDENTITY.TITLE' | translate }}</label>
-            <input type="text" placeholder="Captain">
+            <input type="text" placeholder="Captain" size="18">
         </div>
         <div class="sheetComponentBodyLine">
             <label> {{ 'SHEET.IDENTITY.RELIGION' | translate }}</label>
-            <input type="text" placeholder="Atheist">
+            <input type="text" placeholder="Atheist" size="18">
         </div>
     </div>
 </div>
