--- a/src/gurpsy/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
@@ -5,15 +5,15 @@
     <div class="sheetComponentBody">
         <div class="sheetComponentBodyLine">
             <label> {{ 'SHEET.PLAYER_INFORMATION.PLAYER' | translate }}</label>
-            <input type="text" placeholder="Steve Jackson">
+            <input type="text" placeholder="Steve Jackson" size="18">
         </div>
         <div class="sheetComponentBodyLine">
             <label> {{ 'SHEET.PLAYER_INFORMATION.CAMPAIGN' | translate }}</label>
-            <input type="text" placeholder="Masters of Mayhem">
+            <input type="text" placeholder="Masters of Mayhem" size="18">
         </div>
         <div class="sheetComponentBodyLine">
             <label> {{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}</label>
-            <input type="text" placeholder="Januari 1, 2000">
+            <input type="text" placeholder="Januari 1, 2000" size="18">
         </div>
     </div>
 </div>
