Continued work on styling and angular/flex

--- a/src/gurpsy/components/sheet-component/sheet-header-component/points-component/points.component.css
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/points-component/points.component.css
@@ -10,3 +10,7 @@
   width: 30px;
   text-align: right;
 }
+
+.points .sheetComponentBody .sheetComponentBodyLine label:first-child {
+  width: 57px;
+}
