--- a/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.html
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.html
@@ -1,6 +1,7 @@
 <div class="sheetHeader flex-container"
      fxLayout="row"
-     fxLayoutAlign="start">
+     fxLayoutAlign="stretch"
+     fxLayoutGap="1px">
   <gurpsy-portrait-component class="portraitWrapper flex-item" fxFlex="112px" fxHide="false" fxHide.xs></gurpsy-portrait-component>
   <div class="centerComponentsWrapper flex-item" fxFlex fxFlex.xs>
     <div class="centerComponentsFirstLineWrapper">
