Continued work on styling and angular/flex,A commit to test on mobile

--- a/src/gurpsy/components/sheet-component/sheet-header-component/description-component/description.component.css
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/description-component/description.component.css
@@ -1,5 +1,5 @@
 .description {
   background: var(--sheet-component-body-background-color);
   color: var(--sheet-data-font-color);
-  flex: 1 1 auto;
+  /*flex: 1 1 auto;*/
 }
