--- a/src/gurpsy/components/sheet-component/sheet-header-component/points-component/points.component.html
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/points-component/points.component.html
@@ -3,37 +3,69 @@
     {{ 'SHEET.POINTS.POINTS' | translate }}
   </div>
   <div class="sheetComponentBody">
-    <div class="sheetComponentBodyLine">
-      <label>{{ 'SHEET.POINTS.RACE' | translate }}</label>
-      <label>0</label>
+    <div class="flex-container"
+         fxLayout="row"
+         fxLayoutAlign="space-between stretch"
+         fxLayoutGap="10px"
+         fxLayoutWrap="nowrap">
+      <label class="flex-item">{{ 'SHEET.POINTS.RACE' | translate }}</label>
+      <span class="flex-item">0</span>
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>{{ 'SHEET.POINTS.ATTRIBUTES' | translate }}</label>
-      <label>0</label>
+    <div class="flex-container"
+         fxLayout="row"
+         fxLayoutGap="10px"
+         fxLayoutAlign="space-between stretch"
+         fxLayoutWrap="nowrap">
+      <label class="flex-item">{{ 'SHEET.POINTS.ATTRIBUTES' | translate }}</label>
+      <span class="flex-item">0</span>
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>{{ 'SHEET.POINTS.ADVANTAGES' | translate }}</label>
-      <label>0</label>
+    <div class="flex-container"
+         fxLayout="row"
+         fxLayoutAlign="space-between stretch"
+         fxLayoutGap="10px"
+         fxLayoutWrap="nowrap">
+      <label class="flex-item">{{ 'SHEET.POINTS.ADVANTAGES' | translate }}</label>
+      <span class="flex-item">0</span>
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>{{ 'SHEET.POINTS.DISADVANTAGES' | translate }}</label>
-      <label>0</label>
+    <div class="flex-container"
+         fxLayout="row"
+         fxLayoutAlign="space-between stretch"
+         fxLayoutGap="10px"
+         fxLayoutWrap="nowrap">
+      <label class="flex-item">{{ 'SHEET.POINTS.DISADVANTAGES' | translate }}</label>
+      <span class="flex-item">0</span>
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>{{ 'SHEET.POINTS.QUIRKS' | translate }}</label>
-      <label>0</label>
+    <div class="flex-container"
+         fxLayout="row"
+         fxLayoutAlign="space-between stretch"
+         fxLayoutGap="10px"
+         fxLayoutWrap="nowrap">
+      <label class="flex-item">{{ 'SHEET.POINTS.QUIRKS' | translate }}</label>
+      <span class="flex-item">0</span>
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>{{ 'SHEET.POINTS.SKILLS' | translate }}</label>
-      <label>0</label>
+    <div class="flex-container"
+         fxLayout="row"
+         fxLayoutAlign="space-between stretch"
+         fxLayoutGap="10px"
+         fxLayoutWrap="nowrap">
+      <label class="flex-item">{{ 'SHEET.POINTS.SKILLS' | translate }}</label>
+      <span class="flex-item">0</span>
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>{{ 'SHEET.POINTS.SPELLS' | translate }}</label>
-      <label>0</label>
+    <div class="flex-container"
+         fxLayout="row"
+         fxLayoutAlign="space-between stretch"
+         fxLayoutGap="10px"
+         fxLayoutWrap="nowrap">
+      <label class="flex-item">{{ 'SHEET.POINTS.SPELLS' | translate }}</label>
+      <span class="flex-item">0</span>
     </div>
-    <div class="sheetComponentBodyLine earned">
-      <label>{{ 'SHEET.POINTS.EARNED' | translate }}</label>
-      <input type="text" placeholder="37">
+    <div class="earned flex-container"
+         fxLayout="row"
+         fxLayoutAlign="space-between stretch"
+         fxLayoutGap="10px"
+         fxLayoutWrap="nowrap">
+      <label class="flex-item">{{ 'SHEET.POINTS.EARNED' | translate }}</label>
+      <span class="flex-item">37</span>
     </div>
   </div>
 </div>
