Fixed issue with description component not fitting in the header in xs

--- a/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.html
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.html
@@ -24,7 +24,8 @@
     <gurpsy-description-component class="descriptionWrapper flex-item flex-container"
                                   fxLayout="column"
                                   fxLayoutAlign="start stretch"
-                                  fxFlex></gurpsy-description-component>
+                                  fxFlex.gt-xs
+                                  ></gurpsy-description-component>
   </div>
   <gurpsy-points-component class="pointsWrapper flex-item"
                            fxFlex="120px"
