Final tweaks to get the header right

--- a/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.html
+++ b/src/gurpsy/components/sheet-component/sheet-header-component/sheet-header.component.html
@@ -1,7 +1,6 @@
 <div class="sheetHeader flex-container"
      fxLayout="row"
      fxLayoutAlign="space-between stretch"
-     fxLayoutGap="1px"
      fxLayoutWrap="nowrap">
   <gurpsy-portrait-component class="portraitWrapper flex-item"
                              fxFlex="112px"
@@ -24,7 +23,8 @@
     <gurpsy-description-component class="descriptionWrapper flex-item flex-container"
                                   fxLayout="column"
                                   fxLayoutAlign="start stretch"
-                                  fxFlex.gt-xs
+                                  fxFlex
+                                  fxFlex.xs="10"
                                   ></gurpsy-description-component>
   </div>
   <gurpsy-points-component class="pointsWrapper flex-item"
