--- a/src/app/components/header-component/header.component.html
+++ b/src/app/components/header-component/header.component.html
@@ -15,10 +15,10 @@
       <md-icon>more_vert</md-icon>
     </button>
     <md-menu x-position="before" y-position="below" #settings="mdMenu">
-      <button md-menu-item>
+      <button md-menu-item (click)="onOpenSheetDialog()">
         <md-icon>add</md-icon>
         <span>{{ 'MENU.OPEN' | translate }}</span></button>
-      <button md-menu-item>
+      <button md-menu-item (click)="onOpenDeleteSettingsDialog()">
         <md-icon>delete</md-icon>
         <span>{{ 'MENU.CLEAR_SETTINGS' | translate }}</span></button>
     </md-menu>
